un par de errorcitos y que no se ejecuta el HP